brainstation/question1/app1/istio/app1-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - app1-gateway
  http:
  - route:
    - destination:
        host: app1
        subset: app1
